@@ -468,7 +468,7 @@ Text = "Tekst"
 Theme = "Thema"
 TheWorld = "De wereld"
 ThreeColumns = "Drie kolommen"
-ThreeColumnsGroupInactive = "Drie kolommengroep niet actief"
+ThreeColumnsGroupInactive = "Drie kolommen, groepeer de onzichtbare tools in een afzonderlijke tab"
 Time = "Tijd"
 TimeOnCourse = "Tijd besteed in cursus"
 TimesAccessed = "Aantal keren ingelogd"
@@ -484,7 +484,7 @@ ToolComponentTypeDoesNotExist = "Tool component type bestaat niet"
 ToolContentObjectUpdateComponent = "Bewerk {TITLE}"
 ToolDependentPublishButton = "Maak publiceerknop (label) afhankelijk van de tool"
 ToolDoesNotExist = "Tool bestaat niet"
-ToolLayout = "Lay-out tool"
+ToolLayout = "Tool lay-out"
 ToolName = "Tool"
 ToolPublicationUpdaterComponent = "Bewerk {TITLE} publicatie"
 Tools = "Tools"
@@ -499,7 +499,7 @@ TotalTime = "Totale tijd"
 TotalTimesAccessed = "Totaal aantal keren ingelogd"
 TotalTimeSpent = "Totale tijd gespendeerd"
 TwoColumns = "Twee kolommen"
-TwoColumnsGroupInactive = "Twee kolommengroep niet actief"
+TwoColumnsGroupInactive = "Twee kolommen, groepeer de onzichtbare tools in een afzonderlijke tab"
 Type = "Type"
 TypeName = "Cursussen"
 Unlimited = "Onbeperkt"
